Updating application name.

--- a/src/webui/imdata/templates/layout.html
+++ b/src/webui/imdata/templates/layout.html
@@ -11,7 +11,7 @@
 	{% block header %}
 		<div id="header">
 			<span class="title">
-				<a href="{% url webui:index %}">{% trans "Application Name" %}</a>
+				<a href="{% url webui:index %}">{% trans "Live Manager" %}</a>
 			</span>
 			<div class="right">
 				<div id="user">
