--- a/src/webui/imdata/templates/layout_base.html
+++ b/src/webui/imdata/templates/layout_base.html
@@ -16,7 +16,7 @@
 <meta http-equiv="Cache-Control" content="no-cache" />
 
 {# Title #}
-<title>{% block title %}{% trans "Application" %}{% endblock %}</title>
+<title>{% block title %}{% trans "Live Manager" %}{% endblock %}</title>
 
 {# CSS #}
 <style type="text/css" media="screen, print">
