--- a/src/webui/imdata/templates/profiles/login.html
+++ b/src/webui/imdata/templates/profiles/login.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Cache-Control" content="no-cache" />
 
-<title>{% trans "Application" %}</title>
+<title>{% trans "Live Manager" %}</title>
 
 <style type="text/css" media="screen">
 	{% if debug %}
