--- a/src/webui/imdata/templates/generic/form-submit.html
+++ b/src/webui/imdata/templates/generic/form-submit.html
@@ -2,5 +2,8 @@
 <div class="actions">
 	<input type="submit" value="{% trans "Save" %}" class="default" name="_save_list" />
 	<input type="submit" value="{% trans "Save and continue editing" %}" name="_save_edit" />
-	<input type="submit" value="{% trans "Save and add another" %}"  name="_save_add" />
+	<input type="submit" value="{% trans "Save and add another" %}" name="_save_add" />
+	{% if delete %}
+	<p class="delete-box"><a href="#" class="delete">{% trans "Delete" %}</a></p>
+	{% endif %}
 </div>
