--- a/src/webui/imdata/templates/generic/search-advanced.html
+++ b/src/webui/imdata/templates/generic/search-advanced.html
@@ -13,7 +13,7 @@
 		<fieldset>
 			{{ fields }}
 			<input type="submit" value="{% trans "Search" %}"
-				alt="{% trans "Search" %}" title="{% trans "Search" %}" />
+				alt="{% trans "Search" %}" alt="{% trans "Search" %}" />
 		</fieldset>
 	</form>
 </div>
