--- a/src/webui/imdata/templates/profiles/login.html
+++ b/src/webui/imdata/templates/profiles/login.html
@@ -17,6 +17,13 @@
 	{% else %}
 		@import url("{{MEDIA_URL}}css/all.min.css");
 	{% endif %}
+	{% if "MSIE" in request.META.HTTP_USER_AGENT %}
+		@import url("{{MEDIA_URL}}css/current/specific-msie.css");
+	{% else %}{% if "WebKit" in request.META.HTTP_USER_AGENT %}
+		@import url("{{MEDIA_URL}}css/current/specific-webkit.css");
+	{% else %}{% if "Gecko" in request.META.HTTP_USER_AGENT %}
+		@import url("{{MEDIA_URL}}css/current/specific-moz.css");
+	{% endif %}{% endif %}{% endif %}
 </style>
 
 {% if debug %}
