--- a/src/webui/media/css/current/pagination.css
+++ b/src/webui/media/css/current/pagination.css
@@ -16,10 +16,12 @@ ul.pagination li {
 ul.pagination li a {
 	margin-right: 2px;
 	font-weight: bold;
+	/* -specific-
 	background: -webkit-gradient(linear, 0 40%, 0 70%, from(#F9F9F9), to(#E3E3E3));
 	background: -moz-linear-gradient(top, #F9F9F9, #E3E3E3);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3)";
+	*/
 	border: 1px solid #BBB;
 }
 
@@ -39,10 +41,12 @@ ul.pagination li a:hover {
 
 ul.pagination .previous-off,
 ul.pagination .next-off {
+	/* -specific-
 	background: -webkit-gradient(linear, 0 40%, 0 70%, from(#F9F9F9), to(#E3E3E3));
 	background: -moz-linear-gradient(top, #F9F9F9, #E3E3E3);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#FFF9F9F9, endColorstr=#FFE3E3E3)";
+	*/
 	border: 1px solid #BBB;
 	color: #BBB;
 	display: block;
