--- a/src/webui/imdata/templates/acls/edit.html
+++ b/src/webui/imdata/templates/acls/edit.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% load i18n %}
+{% load i18n xinclude %}
 
 {% block title %}
 {% trans "Change ACL" %}
@@ -9,6 +9,29 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	$('#id_action').focus();
+
+	function delete_show(caller, callbacks, items) {
+		$("#confirm_delete .description").text(
+			"{% trans "You're about to delete this acl." %}"
+		);
+		$("#confirm_delete").modal();
+		$("#confirm_delete .yes").click(callbacks.yes);
+		$("#confirm_delete .no").click(callbacks.no);
+	}
+
+	function delete_confirm(args) {
+		window.location.replace(args.url);
+	}
+
+	function setup_events() {
+		Selection.bindActionClickConfirm({
+			selector: '.delete',
+			url: '{% url webui:acls-delete model.id %}',
+			items: '{{ model.id }}',
+			onShow: delete_show,
+			onConfirm: delete_confirm});
+	}
+	setup_events();
 });
 </script>
 {% endblock %}
@@ -19,7 +42,8 @@ $(document).ready(function() {
 	<form method="post" action="" class="generic">
 		{% csrf_token %}
 		{% include "generic/form-fieldset.html" %}
-		{% include "generic/form-submit.html" %}
+		{% xinclude "generic/form-submit.html", delete=1 %}
 	</form>
 </div>
+{% include "generic/modal-delete.html" %}
 {% endblock %}
