--- a/src/webui/imdata/templates/groups/form-fieldset-rules.html
+++ b/src/webui/imdata/templates/groups/form-fieldset-rules.html
@@ -12,9 +12,9 @@
 			<img src="{{MEDIA_URL}}img/django/icon_search.gif"> 
 			<input type="text" id="rules_available_filter" />
 		</p>
-		<select id="rules_available" name="rules_available" multiple style="height: 200px;">
+		<select id="rules_available" name="rules_available" multiple style="height: 200px; width:250px;">
 		{% for rule in available_rules %}
-			<option value="{{ rule.id }}">{% trans rule.rulename %}</option>
+			<option value="{{ rule.id }}" {% if rule.description %}title="{% trans rule.description %}"{% endif %}>{% trans rule.rulename %}</option>
 		{% endfor %}
 		</select>
 	</div>
@@ -35,10 +35,10 @@
 		<div class="titlebar widget right">
 			<span>{% trans "assigned" %}</span>
 		</div>
-		<select id="rules" name="rules" multiple style="height:225px;">
+		<select id="rules" name="rules" multiple style="height:225px; width:250px;">
 		{% if form.instance.pk %}
 			{% for rule in form.instance.rules.all %}
-				<option value="{{ rule.id }}">{% trans rule.rulename %}</option>
+				<option value="{{ rule.id }}" {% if rule.description %}title="{% trans rule.description %}"{% endif %}>{% trans rule.rulename %}</option>
 			{% endfor %}
 		{% endif %}
 		</select>
