--- a/src/webui/imdata/templates/groups/list.html
+++ b/src/webui/imdata/templates/groups/list.html
@@ -9,11 +9,11 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	$('[type=submit]').click(function() { $($(this).attr('target')).submit(); });
-	$('#search form').submit(function() { return SearchUtil.search(this, '{% url webui:groups-index %}'); });
-	$('#search_adv form').submit(function() { return SearchUtil.search(this, '{% url webui:groups-index %}'); });
+	$('#search form').submit(function() { return Search.search(this, '{% url webui:groups-index %}'); });
+	$('#search_adv form').submit(function() { return Search.search(this, '{% url webui:groups-index %}'); });
 	$('#create').click(function() { window.location = '{% url webui:groups-add %}'; });
 
-	FormUtil.make_field_hint('#search', 'search_groupname');
+	Form.makeFieldHint('#search', 'search_groupname');
 
 	function delete_show(caller, callbacks, items) {
 		$("#confirm_delete .description").text(
@@ -29,15 +29,15 @@ $(document).ready(function() {
 	}
 
 	function setup_events() {
-		SelectionUtil.show_actions('.delete');
-		SelectionUtil.bind_list_tr_click({url:'{% url webui:groups-index %}/{0}'});
-		SelectionUtil.bind_action_click_confirm({
+		Selection.showActions('.delete');
+		Selection.bindListRowClick({url:'{% url webui:groups-index %}{0}'});
+		Selection.bindActionClickConfirm({
 			selector: '.delete',
 			url: '{% url webui:groups-delete-many %}',
-			show: delete_show});
+			onShow: delete_show});
 	}
 	setup_events();
-	SearchUtil.afterSearch(setup_events);
+	Search.onComplete = setup_events;
 });
 </script>
 {% endblock %}
