--- a/src/webui/imdata/templates/layout_base.html
+++ b/src/webui/imdata/templates/layout_base.html
@@ -27,12 +27,17 @@
 		@import url('{{MEDIA_URL}}css/current/list.css');
 		@import url('{{MEDIA_URL}}css/current/pagination.css');
 		@import url('{{MEDIA_URL}}css/current/modal.css');
+		@import url('{{MEDIA_URL}}css/current/tooltip.css');
 	{% else %}
 		@import url("{{MEDIA_URL}}css/all.min.css");
 	{% endif %}
 	{% if "MSIE" in request.META.HTTP_USER_AGENT %}
-		@import url("{{MEDIA_URL}}css/current/ie.css");
-	{% endif %}
+		@import url("{{MEDIA_URL}}css/current/specific-msie.css");
+	{% else %}{% if "WebKit" in request.META.HTTP_USER_AGENT %}
+		@import url("{{MEDIA_URL}}css/current/specific-webkit.css");
+	{% else %}{% if "Gecko" in request.META.HTTP_USER_AGENT %}
+		@import url("{{MEDIA_URL}}css/current/specific-moz.css");
+	{% endif %}{% endif %}{% endif %}
 </style>
 
 {% block extrahead %}{% endblock %}
