--- a/src/webui/imdata/templates/layout_extra.html
+++ b/src/webui/imdata/templates/layout_extra.html
@@ -14,6 +14,10 @@
 	{% if LANGUAGE_CODE != 'en' %}
 		<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery.ui.datepicker-{{ LANGUAGE_CODE|langcode }}.min.js"></script>
 	{% endif %}
+	{# jQuery SimpleModal #}
+	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery.simplemodal-1.3.5.min.js"></script>
+	{# jQuery Tools (Tooltip only) #}
+	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery.tools.min.js"></script>
 {% endif %}
 
 {# JavaScript Localization #}
@@ -21,17 +25,14 @@
 {# <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script> #}
 
 {% if debug %}
-	{# jQuery SimpleModal #}
-	<script type="text/javascript" src="{{MEDIA_URL}}js/jquery.simplemodal-1.3.5.min.js"></script>
-
 	{# Others #}
-	<script type="text/javascript" src="{{MEDIA_URL}}js/i18n.util.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/i18n.js"></script>
 	<script type="text/javascript" src="{{MEDIA_URL}}js/string.format.js"></script>
 	<script type="text/javascript" src="{{MEDIA_URL}}js/date.format.js"></script>
-	<script type="text/javascript" src="{{MEDIA_URL}}js/calendar.util.js"></script>
-	<script type="text/javascript" src="{{MEDIA_URL}}js/form.util.js"></script>
-	<script type="text/javascript" src="{{MEDIA_URL}}js/search.util.js"></script>
-	<script type="text/javascript" src="{{MEDIA_URL}}js/selection.util.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/calendar.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/form.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/search.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/selection.js"></script>
 	<script type="text/javascript" src="/media/admin/js/SelectBox.js"></script>
 {% else %}
 	{# All minified scripts #}
@@ -42,6 +43,12 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	$('a[rel=external]').attr('target', '_blank');
+	$("form input[title]").tooltip({
+		position: "center right",
+		offset: [0,10],
+		effect: "fade",
+		opacity: 0.7
+	});
 	$(document).ajaxStart(function() { $('.spinner').show(); });
 	$(document).ajaxStop(function() { $('.spinner').hide(); });
 });
