--- a/src/webui/media/css/current/search.css
+++ b/src/webui/media/css/current/search.css
@@ -23,8 +23,10 @@
 	z-index: 1;
 	border: 1px solid #ccc;
 	border-radius: 7px;
-	-moz-border-radius: 7px;
+	/* -specific-
 	-webkit-border-radius: 7px;
+	-moz-border-radius: 7px;
+	*/
 	outline: none;
 	font-size: 13px;
 	height: 22px;
@@ -55,8 +57,10 @@
 	border: 1px solid #ddd;
 	position: relative;
 	border-radius: 5px;
-	-moz-border-radius: 5px;
+	/* -specific-
   	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	*/
 	padding: 10px;
 	margin-bottom: 10px;
 }
