Let the submit button have 1px border instead of 2px. Commented unused code.

--- a/src/webui/imdata/templates/generic/form-fieldset.html
+++ b/src/webui/imdata/templates/generic/form-fieldset.html
@@ -20,6 +20,7 @@
 		{% endif %}
 	{% endfor %}
 	{% block extrafields %}{% endblock %}
+	{% comment %}
 	<!--
 	{% for field in form %}
 		{% if not field.is_hidden %}
@@ -32,4 +33,5 @@
 		{% endif %}
 	{% endfor %}
 	-->
+	{% endcomment %}
 </fieldset>
