Fixed javascript localization as mentioned in http://code.djangoproject.com/ticket/5494#comment:24.

--- a/src/webui/imdata/templates/layout_extra.html
+++ b/src/webui/imdata/templates/layout_extra.html
@@ -21,8 +21,7 @@
 {% endif %}
 
 {# JavaScript Localization #}
-{# Keep it commented - django.views.i18n.javascript_catalog doesn't work on Django 1.2.1 #}
-{# <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script> #}
+<script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
 
 {% if debug %}
 	{# Others #}
