--- a/src/webui/templates/404.html
+++ b/src/webui/templates/404.html
@@ -2,14 +2,16 @@
 {% load i18n %}
 
 {% block title %}
-{% trans "Not found" %}
+{% trans "Page not found" %}
 {% endblock %}
 
 {% block content %}
 <div id="error_404">
-	<h2>{% trans "Not found" %}</h2>
+	<h2>{% trans "Sorry, that page doesn’t exist!" %}</h2>
+	{% comment %}
 	<div style="margin: 10px;">
-		{% trans "The url" %} <b>{{ request_path }}</b> {% trans "doesn't exist." %}
+		{% trans "The page you are looking for might have been removed, or doesn't exist." %}
 	</div>
+	{% endcomment %}
 </div>
 {% endblock %}
