--- a/src/webui/templates/500.html
+++ b/src/webui/templates/500.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 <div id="error_500">
-	<h2>{% trans "Internal error" %}</h2>
+	<h2>{% trans "Whoops! Something went wrong." %}</h2>
 	<div style="margin: 10px;">
-		{% trans "This shouldn't happen! Please, contact " %}
+		{% trans "An unexpected error occurred on the server.<br/>If the problem persists, contact " %}
 		<a href="mailto:{{ EMAIL_SUPPORT }}">{{ EMAIL_SUPPORT }}</a>.
 	</div>
 </div>
