--- a/src/webui/imdata/templates/layout_extra.html
+++ b/src/webui/imdata/templates/layout_extra.html
@@ -32,11 +32,10 @@
 	<script type="text/javascript" src="{{MEDIA_URL}}js/form.js"></script>
 	<script type="text/javascript" src="{{MEDIA_URL}}js/search.js"></script>
 	<script type="text/javascript" src="{{MEDIA_URL}}js/selection.js"></script>
-	<script type="text/javascript" src="/media/admin/js/SelectBox.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/selectbox.js"></script>
 {% else %}
 	{# All minified scripts #}
 	<script type="text/javascript" src="{{MEDIA_URL}}js/all.min.js"></script>
-	<script type="text/javascript" src="/media/admin/js/SelectBox.js"></script>
 {% endif %}
 
 <script type="text/javascript">
