--- a/src/webui/imdata/templates/layout_extra.html
+++ b/src/webui/imdata/templates/layout_extra.html
@@ -3,17 +3,13 @@
 
 {% block extrahead %}
 
-{# CSS #}
+<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery-1.4.2.min.js"></script>
 {% if debug %}
 	<style type="text/css" media="screen, print">
 		@import url("{{MEDIA_URL}}jquery-ui-1.8.2.custom/css/cupertino/jquery-ui-1.8.2.custom.css");
 	</style>
 	{# jQuery UI #}
-	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery-1.4.2.min.js"></script>
 	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery-ui-1.8.2.custom.min.js"></script>
-	{% if LANGUAGE_CODE != 'en' %}
-		<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery.ui.datepicker-{{ LANGUAGE_CODE|langcode }}.min.js"></script>
-	{% endif %}
 	{# jQuery SimpleModal #}
 	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery.simplemodal-1.3.5.min.js"></script>
 	{# jQuery Tools (Tooltip only) #}
@@ -22,6 +18,10 @@
 
 {# JavaScript Localization #}
 <script type="text/javascript" src="{% url django.views.i18n.javascript_catalog %}"></script>
+{% if LANGUAGE_CODE != 'en' %}
+	{# More localizations here: http://jquery-ui.googlecode.com/svn/trunk/ui/i18n/ #}
+	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.2.custom/js/jquery.ui.datepicker-{{ LANGUAGE_CODE|langcode }}.min.js"></script>
+{% endif %}
 
 {% if debug %}
 	{# Others #}
@@ -39,6 +39,7 @@
 {% endif %}
 
 <script type="text/javascript">
+i18n.changeLanguage('{{ LANGUAGE_CODE|langcode }}');
 $(document).ready(function() {
 	$('a[rel=external]').attr('target', '_blank');
 	$("form input[title]").tooltip({
