--- a/src/webui/imdata/templates/layout_extra.html
+++ b/src/webui/imdata/templates/layout_extra.html
@@ -11,9 +11,9 @@
 	{# jQuery UI #}
 	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.6.custom/js/jquery-ui-1.8.6.custom.min.js"></script>
 	{# jQuery SimpleModal #}
-	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.6.custom/js/jquery.simplemodal-1.3.5.min.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/jquery.simplemodal-1.4.1.min.js"></script>
 	{# jQuery Tools (Tooltip only) #}
-	<script type="text/javascript" src="{{MEDIA_URL}}jquery-ui-1.8.6.custom/js/jquery.tools.min.js"></script>
+	<script type="text/javascript" src="{{MEDIA_URL}}js/jquery.tools.min.js"></script>
 {% endif %}
 
 {# JavaScript Localization #}
