--- a/src/webui/livemgr/templates/generic/actions.html
+++ b/src/webui/livemgr/templates/generic/actions.html
@@ -27,11 +27,11 @@ function change_per_page(caller) {
 	<div align="right" style="padding: 2px; color: #474747; font-size: 0.95em;">
 		<label for="id_per_page">{% trans "show" %} </label>
 		<select id="id_per_page" name="per_page" onchange="change_per_page(this);" style="width: 50px; height: 24px;">
-			<!-- <option value="2" {% if paginator.per_page == 2 %}selected{% endif %}>2</option> -->
-			<option value="5" {% if paginator.per_page == 5 %}selected{% endif %}>5</option>
-			<option value="10" {% if paginator.per_page == 10 %}selected{% endif %}>10</option>
-			<option value="25" {% if paginator.per_page == 25 %}selected{% endif %}>25</option>
-			<option value="50" {% if paginator.per_page == 50 %}selected{% endif %}>50</option>
+			<!-- <option value="2" {% if page.paginator.per_page == 2 %}selected{% endif %}>2</option> -->
+			<option value="5" {% if page.paginator.per_page == 5 %}selected{% endif %}>5</option>
+			<option value="10" {% if page.paginator.per_page == 10 %}selected{% endif %}>10</option>
+			<option value="25" {% if page.paginator.per_page == 25 %}selected{% endif %}>25</option>
+			<option value="50" {% if page.paginator.per_page == 50 %}selected{% endif %}>50</option>
 		</select>
 	</div>
 </div>
